# project-sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Project-Sentinel_roadmap.rtf  Project-Sentinel_roadmap.txt  Project_Sentinel_Memory.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/planning/: README.md
.github/planning/backlog/: PRODUCT_BACKLOG.md
.github/planning/product/: FEATURE_MATRIX.md  MVP.md  ROADMAP.md  VISION.md
.github/workflows/: ci.yml  codeql.yml
docs/: 000-vision.md  001-srs.md  ARCHITECTURE.md  DESIGN_DECISIONS.md  DOMAIN_MODEL.md  PROJECT_HISTORY.md  ROADMAP.md
docs/adr/: ADR-0002-task-instance-model.md  ADR-0003-workspace-centric-architecture.md
scripts/: dev.sh  milestone-001.sh
src/project_sentinel/: __init__.py  __main__.py
src/project_sentinel/cli/: app.py  board.py  calendar.py  doctor.py  graph.py  matrix.py  path.py  project.py  runtime.py  task.py  version.py  workspace.py
src/project_sentinel/config/: __init__.py  defaults.py  loader.py  settings.py
src/project_sentinel/services/: __init__.py  (+8 more)
tests/cli/: test_board_cli.py  test_graph_cli.py  test_matrix_cli.py  test_path_cli.py  test_project_workspace_cli.py  test_task_cli.py
tests/domain/: test_entity.py  test_project.py  test_task.py  test_workspace.py
tests/platform/: __init__.py  test_project_workspace_repository.py  test_task_repository.py
tests/services/: test_calendar_service.py  test_task_scheduler.py  test_task_service.py  test_workspace_project_service.py
(+31 files in other folders)
