[project]
name = "project-sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "manishb", email = "manishb@cdot.in" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "greenlet>=3.3.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
]

[project.scripts]
sentinel = "project_sentinel.__main__:app"
project-sentinel = "project_sentinel.__main__:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
